fix promo code on mobile

--- a/src/js/components/CountDown/CountDown.less
+++ b/src/js/components/CountDown/CountDown.less
@@ -253,6 +253,9 @@ article {
     .subscribe-button {
       font-size: 1.4em;
     }
+    .countdown-content {
+      .isMobile({ height: 250px; });
+    }
   }
 
   @media @desktop-xl {
